Modificacion visual de la navbar

--- a/rentcab/inquilinos/templates/inquilinos/base.html
+++ b/rentcab/inquilinos/templates/inquilinos/base.html
@@ -34,64 +34,6 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarsExample06">
-            <ul class="navbar-nav me-auto mt-0 mb-0">
-              <li class="nav-item pe-2">
-                <button class="btn btn-outline-success" type="button"
-                  <button type="button" onclick="location.href='{% url 'inquilinos:index' %}'">
-                    Inicio
-                  </button>
-                </li>
-                {% if user.is_authenticated %}
-                  {% if user.huesped %}
-                    <li class="nav-item pe-2">
-                      <button class="btn btn-outline-primary active"
-                              onclick="location.href='{% url 'inquilinos:huesped-detail' user.huesped.pk %}'"
-                              type="button">
-                        {{ user.huesped }}
-                      </button>
-                    </li>
-                  {% elif user.is_staff %}
-                  {% else %}
-                    <li class="nav-item pe-2">
-                      <button class="btn btn-outline-primary active"
-                              onclick="location.href='{% url 'inquilinos:huesped-registro' %}'"
-                              type="button">
-                        @{{ user.username }}
-                      </button>
-                    </li>
-                  {% endif %}
-                {% endif %}
-                <li class="nav-item pe-2">
-                  {% if user.is_authenticated %}
-                    <button class="btn btn-outline-secondary active"
-                            onclick="location.href='{% url 'logout' %}'"
-                            type="button">
-                      Cerrar sesión
-                    </button>
-                  {% else %}
-                    <button class="btn btn-outline-success active"
-                            onclick="location.href='{% url 'login' %}'"
-                            type="button">
-                      Iniciar sesión
-                    </button>
-                  {% endif %}
-                </li>
-                {% if user.is_authenticated %}
-                  {% if user.huesped %}
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle"
-                         href="#"
-                         data-bs-toggle="dropdown"
-                         aria-expanded="false">Reservas</a>
-                      <ul class="dropdown-menu">
-                        <li>
-                          <a class="dropdown-item" href="{% url 'inquilinos:reserva-list' %}">Ver mis reservas</a>
-                        </li>
-                      </ul>
-                    </li>
-                  {% endif %}
-                {% endif %}
-              </ul>
               {% comment %} <form role="search">
               <input class="form-control" type="search" placeholder="Search" aria-label="Search">
               </form> {% endcomment %}
@@ -101,6 +43,70 @@
                      width="94"
                      height="24"/>
               </a>
+
+              
+              <ul class="navbar-nav mt-0 mb-0">
+                  {% if user.is_authenticated %}
+                    {% if user.huesped %}
+                      <li class="nav-item pe-2">
+                        <button class="btn btn-outline-primary active"
+                                onclick="location.href='{% url 'inquilinos:huesped-detail' user.huesped.pk %}'"
+                                type="button">
+                          {{ user.huesped }}
+                        </button>
+                      </li>
+                    {% elif user.is_staff %}
+                    {% else %}
+                      <li class="nav-item pe-2">
+                        <button class="btn btn-outline-primary active"
+                                onclick="location.href='{% url 'inquilinos:huesped-registro' %}'"
+                                type="button">
+                          @{{ user.username }}
+                        </button>
+                      </li>
+                    {% endif %}
+                  {% endif %}
+                  {% if user.is_authenticated %}
+                    {% if user.huesped %}
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle"
+                           href="#"
+                           data-bs-toggle="dropdown"
+                           aria-expanded="false">Reservas</a>
+                        <ul class="dropdown-menu">
+                          <li>
+                            <a class="dropdown-item" href="{% url 'inquilinos:reserva-list' %}">Ver mis reservas</a>
+                          </li>
+                        </ul>
+                      </li>
+                    {% endif %}
+                  {% endif %}
+                </ul>
+                <ul class="navbar-nav ms-auto mt-0 mb-0">
+                  <div class="buttons-right">
+                    <li class="nav-item pe-2">
+                      <button class="btn btn-outline-success" type="button"
+                        <button type="button" onclick="location.href='{% url 'inquilinos:index' %}'">
+                          Inicio
+                        </button>
+                      </li>
+                      <li class="nav-item pe-2">
+                        {% if user.is_authenticated %}
+                          <button class="btn btn-outline-secondary active"
+                                  onclick="location.href='{% url 'logout' %}'"
+                                  type="button">
+                            Cerrar sesión
+                          </button>
+                        {% else %}
+                          <button class="btn btn-success"
+                                  onclick="location.href='{% url 'login' %}'"
+                                  type="button">
+                            Iniciar sesión
+                          </button>
+                        {% endif %}
+                    </li>
+                  <div/>
+                </ul>
             </div>
           </div>
         </nav>
