--- a/rentcab/accounts/templates/accounts/signup.html
+++ b/rentcab/accounts/templates/accounts/signup.html
@@ -1,4 +1,5 @@
 {% extends "inquilinos/base.html" %}
+{% load static %}
 {% block content %}
     <br/>
     <div class="col-md-6 offset-md-3 p-5 d-flex justify-content-center border rounded bg-white"
@@ -13,7 +14,10 @@
                                id="typeEmailX"
                                name="email"
                                class="form-control form-control-lg"
-                               value="{% if form.email.value %} {{ form.email.value }}{% endif %}"/>
+                               value="{% if form.email.value %} {{ form.email.value }}{% endif %}"
+                               onblur="validarFormulario()"
+                               />
+                               
                         <label class="form-label" for="typeEmailX">Email</label>
                         <span class="signup">{{ form.email.errors }}</span>
                     </div>
@@ -44,4 +48,5 @@
         </form>
     </div>
 </div>
+<script src="{% static '/js/validation-form.js' %}"></script>
 {% endblock %}
