Registro huesped: validaciones del formulario + estilos

--- a/rentcab/accounts/templates/accounts/signup.html
+++ b/rentcab/accounts/templates/accounts/signup.html
@@ -2,6 +2,11 @@
 {% load static %}
 {% block content %}
     <br/>
+    <script
+        src="https://code.jquery.com/jquery-3.6.1.js"
+        integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
+        crossorigin="anonymous">
+    </script>
     <div class="col-md-6 offset-md-3 p-5 d-flex justify-content-center border rounded bg-white"
          id="divreserva">
         <div class="card-body text-center">
@@ -10,33 +15,43 @@
                 <div class="mb-md-2 mt-md-1 pb-2">
                     <h2 class="fw-bold mb-3">Registrarse</h2>
                     <div class="form-outline form-white mb-4">
+                        <label class="form-label fw-bold" for="typeEmailX">Email</label>
                         <input type="email"
                                id="typeEmailX"
                                name="email"
                                class="form-control form-control-lg"
                                value="{% if form.email.value %} {{ form.email.value }}{% endif %}"
-                               onblur="validarFormulario()"
+                               onblur="validarFormulario()" 
+                               placeholder="Ej.: ejemplo@email.com"
                                />
                                
-                        <label class="form-label" for="typeEmailX">Email</label>
                         <span class="signup">{{ form.email.errors }}</span>
                     </div>
                     <div class="form-outline form-white mb-4">
-                        <input type="text" id="typeEmailX" name="username" class="form-control form-control-lg" value {% if form.username.value %}{{ form.username.value }}{% endif %}/>
-                        <label class="form-label" for="typeEmailX">Usuario</label>
+                        <label class="form-label fw-bold" for="typeEmailX">Usuario</label>
+                        <input type="text" id="typeUserX" name="username" class="form-control form-control-lg" onkeyup="validarUsuario()"  placeholder="Ej.: ejemplo.usuario" value {% if form.username.value %}{{ form.username.value }}{% endif %}/>
                         <span class="signup">{{ form.username.errors }}</span>
                     </div>
                     <div class="form-outline form-white mb-4">
-                        <input type="password" id="typePasswordX" name="password1" class="form-control form-control-lg" value {% if form.password1.value %} {{ form.password1.value }}{% endif %}/>
-                        <label class="form-label" for="typePasswordX">Contraseña</label>
+                        <div class="field-password">
+                            <label class="form-label fw-bold" for="typePasswordX">Contraseña</label>
+                            <input type="password" id="typePasswordX" onkeyup="validarContrasena()" name="password1" class="form-control form-control-lg" placeholder="" value {% if form.password1.value %} {{ form.password1.value }}{% endif %}/>
+                            <span class="shwButton"></span>
+                        </div>
+                        <div class="indicator"> 
+                            <span class="debil"></span>
+                            <span class="media"></span>
+                            <span class="fuerte"></span>
+                        </div>
+                        <div class="text"></div>
                         <span class="signup">{{ form.password1.errors }}</span>
                     </div>
+
                     <div class="form-outline form-white mb-4">
-                        <input type="password" id="typePasswordX" name="password2" class="form-control form-control-lg" value {% if form.password1.value %}{{ form.password2.value }}{% endif %}/>
-                        <label class="form-label" for="typePasswordX">
+                        <label class="form-label fw-bold" for="typePasswordX">
                             Repetir contraseña
-                        </label
-                        >
+                        </label>
+                        <input type="password" id="typePasswordX2" onkeyup="validarPasswordRepetido()" name="password2" class="form-control form-control-lg" placeholder="" value {% if form.password1.value %}{{ form.password2.value }}{% endif %}/>
                         <span class="signup">{{ form.password2.errors }}</span>
                     </div>
                     <p class="small pb-lg-2">
