--- a/rentcab/templates/registration/login.html
+++ b/rentcab/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends "inquilinos/base.html" %}
+{% load static %}
 {% block content %}
     <br/>
     <div class="col-md-3 offset-md-4 p-5 d-flex justify-content-center border rounded bg-white"
@@ -28,12 +29,12 @@
                 </p>
             {% endif %}
             <p class="small mb-3 pb-lg-2">
-                <a class="text-black-50" href="{% url 'password_reset' %}">Has olvidado tu contraseña?</a>
+                <a class="text-black-50" href="{% url 'password_reset' %}">¿Has olvidado tu contraseña?</a>
             </p>
             <button class="btn btn-outline-primary btn-lg px-5" type="submit">Login</button>
             <input type="hidden" name="next" value="{{ next }}" />
         </form>
-        <p class="small mb-0 mt-3 pb-lg-2">No estás registrado?</p>
+        <p class="small mb-0 mt-3 pb-lg-2">¿No estás registrado?</p>
         <br/>
         <a href="{% url 'accounts:sign-up' %}" class="text-black-50 fw-bold">Registrate ahora</a>
     </div>
