--- a/rentcab/inquilinos/static/inquilinos/css/stylesheet.css
+++ b/rentcab/inquilinos/static/inquilinos/css/stylesheet.css
@@ -217,3 +217,91 @@ ul {
   border-color: #28a746de !important;
   background-color: #28a74622 !important;
 }
+
+form .form-outline .indicator {
+  height: 10px;
+  display: none;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
+form .form-outline .indicator span {
+  width: 100%;
+  height: 100%;
+  background: lightgray;
+  border-radius: 5px;
+  position: relative;
+}
+
+form .form-outline .indicator span.media{
+  margin: 0 3px;
+}
+
+form .form-outline .indicator span:before{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+form .form-outline .indicator span.active.debil:before{
+  background-color: #ff4757;
+}
+
+form .form-outline .indicator span.active.media:before{
+  background-color: orange;
+}
+
+form .form-outline .indicator span.active.fuerte:before{
+  background-color: #28a746de;
+}
+
+form .form-outline .text {
+  font-weight: bold;
+  margin-bottom: -10px;
+  display: none;
+}
+
+form .form-outline .text.debil {
+  color: #ff4757;
+  font-size: 15px;
+  margin-bottom: 0.1px;
+}
+
+form .form-outline .text.media {
+  color: orange;
+}
+
+form .form-outline .text.fuerte {
+  color: #28a746de;
+}
+
+form .field-password {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-items: center;
+}
+
+
+form .field-password .shwButton {
+  width: 20px;
+  height: 20px;
+  display: none;
+  position: absolute;
+  margin-right: 5px;
+  right: 10px;
+  top: 70%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  background-image: url("https://i.postimg.cc/PxWD2X5K/mostrar-contrasena.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0.6;
+}
+
