--- a/rentcab/inquilinos/static/inquilinos/css/stylesheet.css
+++ b/rentcab/inquilinos/static/inquilinos/css/stylesheet.css
@@ -220,13 +220,14 @@ ul {
 
 form .form-outline .indicator {
   height: 10px;
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 10px 0;
+  transition: all 1s ease .5s;
 }
 
-form .form-outline .indicator span {
+form .form-outline .indicator div {
   width: 100%;
   height: 100%;
   background: lightgray;
@@ -234,31 +235,34 @@ form .form-outline .indicator span {
   position: relative;
 }
 
-form .form-outline .indicator span.media{
+form .form-outline .indicator :nth-child(2){
   margin: 0 3px;
 }
 
-form .form-outline .indicator span:before{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+form .form-outline .indicator div span{
+  width: 0%;
   height: 100%;
+  position: absolute;
+  left: 0;
   border-radius: 5px;
+  transition: all 0.5s ease 0s;
 }
 
-form .form-outline .indicator span.active.debil:before{
+form .form-outline .indicator div span.active.debil{
+  width: 100%;
   background-color: #ff4757;
 }
 
-form .form-outline .indicator span.active.media:before{
+form .form-outline .indicator div span.active.media{
   background-color: orange;
+  width: 100%;
 }
 
-form .form-outline .indicator span.active.fuerte:before{
+form .form-outline .indicator span.active.fuerte{
   background-color: #28a746de;
+  width: 100%;
 }
+
 
 form .form-outline .text {
   font-weight: bold;
