--- a/rentcab/inquilinos/templates/inquilinos/cab_detail.html
+++ b/rentcab/inquilinos/templates/inquilinos/cab_detail.html
@@ -99,7 +99,7 @@
                 <p class="card-text">{{ comentario.comentario }}</p>
                 <div class="d-flex justify-content-between align-items-center">
                   <small class="text-muted">{{ comentario.huesped }}</small>
-                  <small class="text-muted star-place-holder">{{ comentario.calificacion }}</small>
+                  <small class="star-color star-place-holder">{{ comentario.calificacion }}</small>
                 </div>
               </div>
             </div>
