Corrijo value de signup fields

--- a/app/accounts/templates/accounts/signup.html
+++ b/app/accounts/templates/accounts/signup.html
@@ -15,25 +15,40 @@
                                class="form-control form-control-lg"
                                value="{% if form.email.value %} {{ form.email.value }}{% endif %}"/>
                         <label class="form-label" for="typeEmailX">Email</label>
-                        <span class="signup">{{ form.email.errors }}</span>
+                        <span class="signup text-danger">{{ form.email.errors }}</span>
                     </div>
                     <div class="form-outline form-white mb-4">
-                        <input type="text" id="typeEmailX" name="username" class="form-control form-control-lg" value {% if form.username.value %}{{ form.username.value }}{% endif %}/>
+                        <input type="text" id="typeEmailX" name="username" class="form-control form-control-lg"
+                            value=
+                            {% if form.username.value %}
+                                {{ form.username.value }}
+                            {% endif %}
+                        />
                         <label class="form-label" for="typeEmailX">Usuario</label>
-                        <span class="signup">{{ form.username.errors }}</span>
+                        <span class="signup text-danger">{{ form.username.errors }}</span>
                     </div>
                     <div class="form-outline form-white mb-4">
-                        <input type="password" id="typePasswordX" name="password1" class="form-control form-control-lg" value {% if form.password1.value %} {{ form.password1.value }}{% endif %}/>
+                        <input type="password" id="typePasswordX" name="password1" class="form-control form-control-lg"
+                            value=
+                            {% if form.password1.value %}
+                                {{ form.password1.value }}
+                            {% endif %}
+                        />
                         <label class="form-label" for="typePasswordX">Contraseña</label>
-                        <span class="signup">{{ form.password1.errors }}</span>
+                        <span class="signup text-danger">{{ form.password1.errors }}</span>
                     </div>
                     <div class="form-outline form-white mb-4">
-                        <input type="password" id="typePasswordX" name="password2" class="form-control form-control-lg" value {% if form.password1.value %}{{ form.password2.value }}{% endif %}/>
+                        <input type="password" id="typePasswordX" name="password2" class="form-control form-control-lg"
+                            value=
+                            {% if form.password2.value %}
+                                {{ form.password2.value }}
+                            {% endif %}
+                        />
                         <label class="form-label" for="typePasswordX">
                             Repetir contraseña
                         </label
                         >
-                        <span class="signup">{{ form.password2.errors }}</span>
+                        <span class="signup text-danger">{{ form.password2.errors }}</span>
                     </div>
                     <p class="small pb-lg-2">
                     <a class="text-black-50" href="{% url 'login' %}">Ya tienes una cuenta?</a
