--- a/app/templates/propietarios/cabañas/listarCabañas.html
+++ b/app/templates/propietarios/cabañas/listarCabañas.html
@@ -1,7 +1,7 @@
 {% extends 'propietarios/inicialAdmin.html' %}
 <!--Para que herede todo de index.html -->
 
-{% block titulo %} Listado de Cabañas {% endblock titulo %} 
+{% block titulo %} Listado de Cabañas {% endblock titulo %}
 {% block contentTitulo %}{% endblock contentTitulo %}
 
 {% block conteiner %}
@@ -23,19 +23,19 @@
                             <th style="text-align:center ; background-color: #ffc107;">NOMBRE</th>
                             <th style="text-align:center ; background-color: #ffc107;">CANT HABITACIONES</th>
                             <th style="text-align:center ; background-color: #ffc107;">COSTO POR NOCHE</th>
-                            <th style="text-align:center ; background-color: #ffc107;"></th>	
+                            <th style="text-align:center ; background-color: #ffc107;"></th>
                         </tr>
                     </thead>
                     <tbody>
-                        
+
                         {% for cabaña in cabaña %}
                             <tr role="row" class="odd">
                                 <td>{{ cabaña.nombre }}</td>
                                 <td>{{ cabaña.cantHabitaciones }}</td>
-                                <td>{{ cabaña.costoPorNoche }}</td>
+                                {% comment %} <td>{{ cabaña.costoPorNoche }}</td> {% endcomment %}
                                 <td>
                                     <a class="btn btn-primary btn-sm" href="{% url 'propietarios:editarCab' cabaña.id %}"><i class="fas fa-fas fa-pencil-alt"></i></a>
-                                    <a class="btn btn-warning btn-sm"  href="{% url 'propietarios:registrarRango' cabaña.id %}"  ><icon class="far fa-calendar-alt"></icon></a> 
+                                    <a class="btn btn-warning btn-sm"  href="{% url 'propietarios:registrarRango' cabaña.id %}"  ><icon class="far fa-calendar-alt"></icon></a>
                                     <a class="btn btn-sm" style="background-color: #45b70b;border-color: #45b70b;color: white;" href="#"  ><icon class="fas fa-camera"></icon></a>
                                     {% if cabaña.habilitada == 1 %}
                                         <a class="btn btn-sm" style="background-color: #ec3f0b;border-color: #ec3f0b;color: white;" href="{% url 'propietarios:deshabilitarCab' cabaña.id %}"  ><icon class="fas fa-sync-alt"></icon></a>
@@ -45,10 +45,10 @@
                                     {% endif %}
                                 </td>
                             </tr>
-                        {% endfor %} 
-                        
+                        {% endfor %}
+
                     </tbody>
-                    
+
                 </table>
                 <div style="text-align: right;">
                     <a type="button" class="btn btn-warning mt-4" href="#">Volver</a>
