--- a/app/templates/propietarios/huesped/registrarHuesped.html
+++ b/app/templates/propietarios/huesped/registrarHuesped.html
@@ -26,31 +26,31 @@
                         {% else %}
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.nombre.auto_id }}"> Nombre : </label>
+                                    <label for="{{ form.nombre.auto_id }}"> Nombre</label>
                                     {{ form.nombre }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.apellido.auto_id }}"> Apellido : </label>
+                                    <label for="{{ form.apellido.auto_id }}"> Apellido</label>
                                     {{ form.apellido }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.telefono.auto_id }}"> Teléfono : </label>
+                                    <label for="{{ form.telefono.auto_id }}"> Teléfono</label>
                                     {{ form.telefono }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.dni.auto_id }}"> DNI : </label>
+                                    <label for="{{ form.dni.auto_id }}"> DNI</label>
                                     {{ form.dni }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.email.auto_id }}"> Email : </label>
+                                    <label for="{{ form.email.auto_id }}"> Email</label>
                                     {{ form.email }}
                                 </div>
                             </div>
