--- a/app/templates/propietarios/inicialAdmin.html
+++ b/app/templates/propietarios/inicialAdmin.html
@@ -11,7 +11,11 @@
     <title>{% block titulo %} Rentcab {% endblock titulo %}</title>
     <link rel="icon" type="image/x-icon" href="{% static 'inquilinos/images/favicon.ico' %}" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--GOOGLE FONTS: POPPINS-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{% static 'lib/adminlte-3.1.0/plugins/fontawesome-free/css/all.min.css' %}">
     <!-- Select2 -->
