--- a/app/templates/propietarios/instalacion/registrarInst.html
+++ b/app/templates/propietarios/instalacion/registrarInst.html
@@ -26,13 +26,13 @@
                         {% else %}
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.nombre.auto_id }}"> Nombre : </label>
+                                    <label for="{{ form.nombre.auto_id }}"> Nombre</label>
                                     {{ form.nombre }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.cantHabitaciones.auto_id }}"> Descripción : </label>
+                                    <label for="{{ form.cantHabitaciones.auto_id }}"> Descripción</label>
                                     {{ form.descripcion }}
                                 </div>
                             </div>
