--- a/app/templates/propietarios/promociones/crearPromo.html
+++ b/app/templates/propietarios/promociones/crearPromo.html
@@ -27,38 +27,38 @@
                         {% else %}
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.titulo.auto_id }}"> Título : </label>
+                                    <label for="{{ form.titulo.auto_id }}"> Título </label>
                                     {{ form.titulo }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.descripcion.auto_id }}"> Descripción : </label>
+                                    <label for="{{ form.descripcion.auto_id }}"> Descripción </label>
                                     {{ form.descripcion }}
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="form-group">
-                                    <label for="{{ form.fechaInicio.auto_id }}"> Fecha de Inicio : </label>
+                                    <label for="{{ form.fechaInicio.auto_id }}"> Fecha de Inicio </label>
                                     {{ form.fechaInicio}}
                                 </div>
                                 
                             </div>
                             <div class="col-6">
                                 <div class="form-group">
-                                    <label for="{{ form.fechaFin.auto_id }}"> Fecha de Fin : </label>
+                                    <label for="{{ form.fechaFin.auto_id }}"> Fecha de Fin </label>
                                     {{ form.fechaFin }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.descuento.auto_id }}"> Procentaje de Descuento : </label>
+                                    <label for="{{ form.descuento.auto_id }}"> Procentaje de Descuento </label>
                                     {{ form.descuento }}
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-group">
-                                    <label for="{{ form.cab.auto_id }}"> Cabaña : </label>
+                                    <label for="{{ form.cab.auto_id }}"> Cabaña </label>
                                     {{ form.cab }}
                                 </div>
                             </div>
