--- a/app/templates/propietarios/cabañas/listarCabañas.html
+++ b/app/templates/propietarios/cabañas/listarCabañas.html
@@ -34,9 +34,9 @@
                                 <td>{{ cabaña.cantHabitaciones }}</td>
                                 {% comment %} <td>{{ cabaña.costoPorNoche }}</td> {% endcomment %}
                                 <td>
-                                    <a class="btn btn-primary btn-sm" href="{% url 'propietarios:editarCab' cabaña.id %}"><i class="fas fa-fas fa-pencil-alt"></i></a>
+                                    <a class="btn btn-primary btn-sm" href="{% url 'propietarios:editarCab' cabaña.id %}"><i class="fas fa-fas fa-pencil-alt btn-editar"></i></a>
                                     <a class="btn btn-warning btn-sm"  href="{% url 'propietarios:registrarRango' cabaña.id %}"  ><icon class="far fa-calendar-alt"></icon></a>
-                                    <a class="btn btn-sm" style="background-color: #45b70b;border-color: #45b70b;color: white;" href="#"  ><icon class="fas fa-camera"></icon></a>
+                                    <a class="btn btn-sm btn-camara" style="background-color: #45b70b;border-color: #45b70b;color: white;" href="#"  ><icon class="fas fa-camera icon-camara"></icon></a>
                                     {% if cabaña.habilitada == 1 %}
                                         <a class="btn btn-sm" style="background-color: #ec3f0b;border-color: #ec3f0b;color: white;" href="{% url 'propietarios:deshabilitarCab' cabaña.id %}"  ><icon class="fas fa-sync-alt"></icon></a>
                                     {% endif %}
